Fixed logic for getURL api, updated swagger documentation
