# swagger.json
@@ -9,42 +9,23 @@
         "url": "https://opensource.org/licenses/MIT"
       }
     },
-    "host": "https://url-short-backend.herokuapp.com",
+    "host": "url-short-backend.herokuapp.com",
     "basePath": "/",
-    "tags": [
-      {
-        "name": "Users",
-        "description": "API for users in the system"
-      }
-    ],
+    
     "schemes": ["http"],
     "consumes": ["application/json"],
     "produces": ["application/json"],
-    "paths": {
-      "/{code}": {
+    "paths": 
+      {
+      "/api/url/getAllUrl": {
         "get": {
-          "tags": [
-            "Get Long URL"
-          ],
-          "summary": "Given the short code, redirect to the actual URL",
-          "consumes": [
-            "application/json"
-          ],
-          "parameters": [
-            {
-              "in": "path",
-              "name": "code",
-              "description": "Unique code of the shortened-url",
-              "required": true
-              
-            }
-          ],
+          "summary": "Get all the shortened urls",
           "produces": [
             "*/*"
           ],
           "responses": {
             "200": {
-              "description": "Successfully redirected to the actual URL"
+              "description": "Successfully returned all urls"
               
             },
             "401": {
@@ -62,6 +43,48 @@
           },
           "deprecated": false
         }
+        },
+      "/api/url/getUrl/{code}": {
+          "get": {
+            "summary": "Get the acutal url from the the short url code",
+            "parameters": [
+              {
+                "in": "path",
+                "name": "code",
+                "description": "Short code",
+                "required": true
+                
+              }
+            ],
+            "produces": [
+              "*/*"
+            ],
+            "responses": {
+              "200": {
+                "description": "Successfully returned the url"
+                
+              },
+              "401": {
+                "description": "You are not authorized to view the resource"
+              },
+              "403": {
+                "description": "Accessing the resource you were trying to reach is forbidden"
+              },
+              "404": {
+                "description": "The resource you were trying to reach is not found"
+              },
+              "500": {
+                "description": "Application failed to process the request"
+              }
+            },
+            "deprecated": false
+          }
+        }  
       }
-    }
+      
+      
+        
+
+    
+    
   }
